update resume
