# app/contexts.go
@@ -1,4 +1,4 @@
-// Code generated by goagen v1.2.0-dirty, DO NOT EDIT.
+// Code generated by goagen v1.3.0, DO NOT EDIT.
 //
 // API "jlwarren1": Application Contexts
 //
@@ -6,7 +6,7 @@
 // $ goagen
 // --design=github.com/jaredwarren/jlwarren1.com/design
 // --out=$(GOPATH)/src/github.com/jaredwarren/jlwarren1.com
-// --version=v1.2.0-dirty
+// --version=v1.3.0
 
 package app
 
@@ -111,6 +111,37 @@ func (ctx *ResumeHomeContext) OK(resp []byte) error {
 
 // InternalServerError sends a HTTP response with status code 500.
 func (ctx *ResumeHomeContext) InternalServerError(r error) error {
+	ctx.ResponseData.Header().Set("Content-Type", "application/vnd.goa.error")
+	return ctx.ResponseData.Service.Send(ctx.Context, 500, r)
+}
+
+// UpdateResumeHomeContext provides the home updateResume action context.
+type UpdateResumeHomeContext struct {
+	context.Context
+	*goa.ResponseData
+	*goa.RequestData
+}
+
+// NewUpdateResumeHomeContext parses the incoming request URL and body, performs validations and creates the
+// context used by the home controller updateResume action.
+func NewUpdateResumeHomeContext(ctx context.Context, r *http.Request, service *goa.Service) (*UpdateResumeHomeContext, error) {
+	var err error
+	resp := goa.ContextResponse(ctx)
+	resp.Service = service
+	req := goa.ContextRequest(ctx)
+	req.Request = r
+	rctx := UpdateResumeHomeContext{Context: ctx, ResponseData: resp, RequestData: req}
+	return &rctx, err
+}
+
+// Created sends a HTTP response with status code 301.
+func (ctx *UpdateResumeHomeContext) Created() error {
+	ctx.ResponseData.WriteHeader(301)
+	return nil
+}
+
+// InternalServerError sends a HTTP response with status code 500.
+func (ctx *UpdateResumeHomeContext) InternalServerError(r error) error {
 	ctx.ResponseData.Header().Set("Content-Type", "application/vnd.goa.error")
 	return ctx.ResponseData.Service.Send(ctx.Context, 500, r)
 }
