# app/controllers.go
@@ -1,4 +1,4 @@
-// Code generated by goagen v1.2.0-dirty, DO NOT EDIT.
+// Code generated by goagen v1.3.0, DO NOT EDIT.
 //
 // API "jlwarren1": Application Controllers
 //
@@ -6,7 +6,7 @@
 // $ goagen
 // --design=github.com/jaredwarren/jlwarren1.com/design
 // --out=$(GOPATH)/src/github.com/jaredwarren/jlwarren1.com
-// --version=v1.2.0-dirty
+// --version=v1.3.0
 
 package app
 
@@ -38,6 +38,7 @@ type HomeController interface {
 	Dashboard(*DashboardHomeContext) error
 	Profile(*ProfileHomeContext) error
 	Resume(*ResumeHomeContext) error
+	UpdateResume(*UpdateResumeHomeContext) error
 }
 
 // MountHomeController "mounts" a Home resource controller on the given service.
@@ -90,6 +91,21 @@ func MountHomeController(service *goa.Service, ctrl HomeController) {
 	service.Mux.Handle("GET", "/resume", ctrl.MuxHandler("resume", h, nil))
 	service.LogInfo("mount", "ctrl", "Home", "action", "Resume", "route", "GET /resume")
 
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewUpdateResumeHomeContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		return ctrl.UpdateResume(rctx)
+	}
+	service.Mux.Handle("GET", "/resume/update", ctrl.MuxHandler("updateResume", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "action", "UpdateResume", "route", "GET /resume/update")
+
 	h = ctrl.FileHandler("/static/*filename", "static/")
 	service.Mux.Handle("GET", "/static/*filename", ctrl.MuxHandler("serve", h, nil))
 	service.LogInfo("mount", "ctrl", "Home", "files", "static/", "route", "GET /static/*filename")
@@ -98,35 +114,15 @@ func MountHomeController(service *goa.Service, ctrl HomeController) {
 	service.Mux.Handle("GET", "/resume/JaredWarren-Resume.pdf", ctrl.MuxHandler("serve", h, nil))
 	service.LogInfo("mount", "ctrl", "Home", "files", "static/JaredWarren-Resume.pdf", "route", "GET /resume/JaredWarren-Resume.pdf")
 
-	h = ctrl.FileHandler("/bower_components/*filename", "static/bower_components/")
-	service.Mux.Handle("GET", "/bower_components/*filename", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "files", "static/bower_components/", "route", "GET /bower_components/*filename")
-
 	h = ctrl.FileHandler("/images/favicon.ico", "static/images/favicon.ico")
 	service.Mux.Handle("GET", "/images/favicon.ico", ctrl.MuxHandler("serve", h, nil))
 	service.LogInfo("mount", "ctrl", "Home", "files", "static/images/favicon.ico", "route", "GET /images/favicon.ico")
 
-	h = ctrl.FileHandler("/index.html", "static/index.html")
-	service.Mux.Handle("GET", "/index.html", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "files", "static/index.html", "route", "GET /index.html")
-
-	h = ctrl.FileHandler("/index", "static/index.html")
-	service.Mux.Handle("GET", "/index", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "files", "static/index.html", "route", "GET /index")
-
-	h = ctrl.FileHandler("/src/*filename", "static/src/")
-	service.Mux.Handle("GET", "/src/*filename", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "files", "static/src/", "route", "GET /src/*filename")
+	h = ctrl.FileHandler("/.well-known/keybase.txt", "static/keybase.txt")
+	service.Mux.Handle("GET", "/.well-known/keybase.txt", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "files", "static/keybase.txt", "route", "GET /.well-known/keybase.txt")
 
 	h = ctrl.FileHandler("/static/", "static/index.html")
 	service.Mux.Handle("GET", "/static/", ctrl.MuxHandler("serve", h, nil))
 	service.LogInfo("mount", "ctrl", "Home", "files", "static/index.html", "route", "GET /static/")
-
-	h = ctrl.FileHandler("/bower_components/", "static/bower_components/index.html")
-	service.Mux.Handle("GET", "/bower_components/", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "files", "static/bower_components/index.html", "route", "GET /bower_components/")
-
-	h = ctrl.FileHandler("/src/", "static/src/index.html")
-	service.Mux.Handle("GET", "/src/", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "files", "static/src/index.html", "route", "GET /src/")
 }
